@@ -2,7 +2,15 @@
 
 From 1.6rc2 (svn/unreleased)
 
-- Change [developer's name]
+- Merging of colliding datagridwidget.css and datagridwidget.css.dtml files.
+  Fixes issue #30: http://plone.org/products/datagridfield/issues/30.  Which
+  file was ultimately selected appears to be inconsistent.  If you're
+  depending upon an overridden version of either and notice bugs with regards
+  to hidden columns and/or rows appearing or the promise of adding additional
+  DGF rows when using the FixedColumn, you'd be well suited to reconcile your
+  customizations with the merged files from rXXXX at:
+  
+  [andrewb]
 
 
 From 1.6rc1
